@@ -2,13 +2,13 @@ DEFINED_PHASES=install postinst postrm preinst unpack
 DEPEND=>=sys-apps/sed-4
 DESCRIPTION=Easy way to install DLLs needed to work around problems in Wine
 EAPI=5
-HOMEPAGE=http://code.google.com/p/winetricks/ http://wiki.winehq.org/winetricks
+HOMEPAGE=http://winetricks.org http://wiki.winehq.org/winetricks
 IUSE=gtk kde rar
 KEYWORDS=~amd64 ~x86
 LICENSE=LGPL-2.1+
 RDEPEND=app-arch/cabextract app-arch/p7zip app-arch/unzip app-emulation/wine net-misc/wget x11-misc/xdg-utils gtk? ( gnome-extra/zenity ) kde? ( kde-base/kdialog ) rar? ( app-arch/unrar )
 RESTRICT=test
 SLOT=0
-SRC_URI=http://winetricks.org/download/releases/winetricks-20141130.tar.gz gtk? ( http://dev.gentoo.org/~tetromino/distfiles/wine/winetricks-gentoo-2012.11.24.tar.bz2 ) kde? ( http://dev.gentoo.org/~tetromino/distfiles/wine/winetricks-gentoo-2012.11.24.tar.bz2 )
+SRC_URI=https://github.com/Winetricks/winetricks/archive/20150416.tar.gz -> winetricks-20150416.tar.gz gtk? ( http://dev.gentoo.org/~tetromino/distfiles/wine/winetricks-gentoo-2012.11.24.tar.bz2 ) kde? ( http://dev.gentoo.org/~tetromino/distfiles/wine/winetricks-gentoo-2012.11.24.tar.bz2 )
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=139955a052a4a2ad81f3a042cfa729a6
+_md5_=1a5a7aaa682827f6c6962ec65827a9d3
